refactor: 최종 수정